--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,10 @@
 ::-webkit-scrollbar {
   display: none;
 }
+em-emoji-picker {
+  position: absolute;
+  bottom: 100px;
+  height: 15vh;
+  min-height: 300px;
+  max-height: 500px;
+}
